cabal-version: 1.12
name:          solution
version:       0.0.0
build-type:    Simple

executable solve
  main-is:          Main.hs
  other-modules:    Paths_solution
  ghc-options:      -Wall -Wno-missing-signatures
  build-depends:
      attoparsec
    , array
    , base                  >=4 && <5
    , bytestring
    , containers
    , mtl
    , raw-strings-qq
    , split
    , unordered-containers
    , vector

  default-language: GHC2021
